manifests/canary-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dungeons-and-dragons-canary
  namespace: jonathan-nunez
  labels:
    app: dungeons-and-dragons
spec:
  replicas: $CANARY_REPLICAS
  selector:
    matchLabels:
      app: dungeons-and-dragons
      track: canary 
      # track label will be used to differentiate the pods from the production
      # vs the canary
  template:
    metadata:
      namespace: jonathan-nunez
      labels:
        app: dungeons-and-dragons
        track: canary
    spec:
      volumes:
      - name: config
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        ports:
        - containerPort: 24224
        image: grafana/fluent-plugin-loki:latest
        imagePullPolicy: IfNotPresent # optional, is default value
        volumeMounts:
        - name: config # use the same name as the name for the volumes we described
          mountPath: /fluentd/etc/fluent.conf
          # path inside the container we will mount to
          # the destination
          subPath: fluent.conf
          # path inside the volume we are mounting from
          # the source
      - name: dungeons-and-dragons
        image: $DOCKER_IMAGE_NAME:$GIT_COMMIT
        ports:
        - containerPort: 8080
        imagePullPolicy: Always #Optional
