manifests/dungeons-and-dragons-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dungeons-and-dragons
  namespace: jonathan-nunez
spec:
  selector:
    app: dungeons-and-dragons
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
