manifests/dungeons-and-dragons-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: dungeons-and-dragons
  namespace: jonathan-nunez
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /dungeons-and-dragons/?(.*)
        backend:
          serviceName: dungeons-and-dragons
          servicePort: 8080
